<resources>
    <string name="client_id">AeiCU_le3uJEQhla6u9WYkhsL6y9ZZR7JRqxmf3_vSZJpzEseLSYDK-OjL_cF01vEOfx8x3cXYxwvByu</string>
    <string name="app_name">Pediatría Innovadora</string>
    <string name="title_activity_main">Inicio</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_home">Inicio</string>
    <string name="nav_item_register">Registrar Bebé</string>
    <string name="nav_item_doctors">Doctores Disponibles</string>
    <string name="nav_item_profile">Perfil</string>
    <string name="nav_item_history">Historial</string>
    <string name="nav_item_crecimiento">Crecimiento (Peso y Talla)</string>
    <string name="nav_item_desarrollo">Desarrollo Físico y Mental</string>
    <string name="nav_item_cartilla_vacunacion">Vacunas</string>
    <string name="nav_item_videos">Videos</string>
    <string name="nav_item_call_center">Call Center</string>
    <string name="nav_item_about">Acerca</string>
    <string name="nav_item_logout">Cerrar Sesión</string>
    <string name="menu_item_search">Buscar</string>
    <string name="menu_item_baby">Bebé</string>
    <string name="menu_item_vacuna">Vacuna</string>
    <string name="welcome_text">
        Pediatría Innovadora es una nueva forma de llevar el control de la salud de tu bebé incluyendo sus vacunas aplicadas.\nTambién
        podrás interactuar con tu Pediatra (si él baja esta App) o podrás consultar en línea con otros pediatras certificados
        y experimentados en los casos que requieran una orientación de primer contacto en los problemas NO URGENTES cuya importancia o
        gravedad no requieran ser revisados físicamente ya sea en el consultorio o en un hospital.\nMediante esta App podrás también consultar
        los lineamientos generales en el cuidado y manejo de los niños mediante videos tutoriales en donde se emiten recomendaciones
        del crecimiento y desarrollo normal de tu bebé.\n\nBienvenidos
        a esta nueva experiencia digital esperando poder ayudarlos en el difícil arte de cuidar  a nuestros
        niños.\n\nDerechos Reservados:\nNo. de registro:\n03-2019-070211024300-01\n03-2019-070211084400-01
    </string>
    <string name="about_text1">
        El Dr. Juan José Díaz Miranda es Pediatra con 40 años de experiencia clínica en la Pediatría,
        graduado como Médico Cirujano por la UNAM y egresado como Especialista en Pediatra y con Sub-especialidad
        en Urgencias y Terapia Intensiva por el Instituto Nacional de Pediatría de México, en donde desempeñó el
        cargo de Jefe del Dpto de Terapia Intensiva y Profesor titular de esta Especialidad, participando como
        Profesor Invitado en multiples congresos nacionales e internacionales en donde obtuvo reconocimientos por
        su creatividad e inventiva, desarrollando implementos varios de ellos patentados tendientes a resolver
        problemas cotidianos en la práctica pediátrica.

    </string>
    <string name="about_text2">
        Recientemente fue galardonado con el premio al mérito REMEI 2018 por el Estado de Morelos; lugar en
        donde fijó su residencia y práctica privada de la Pediatría, desde donde ha sido pionero en la ayuda
        que puede brindarse a los padres en el cuidado de sus hijos,  a través de las redes sociales y canales
        masivos de comunicación necesarios y acordes a la era digital que estamos viviendo.
    </string>
    <string name="terminos">
        <![CDATA[

        <html>

        <head>
        <h2 style="text-align:center">Terminos y Condiciones</h2>
        </head>

        <body>

        <p align="justify">La Aplicación denominada <b>“PEDIATRÍA INNOVADORA”</b> es una marca registrada propiedad del <b>Dr. Juan José Díaz Miranda</b>,
        Pediatra autorizado para ejercer libremente su profesión según consta en la Cédula profesional emitida por la
        Dirección General de Profesiones de la SEP de México con número <b>338527</b> y Cédula de Especialista <b>3272905</b>;
        certificado y re-certificado el 30 de Marzo de 2017,  por el Consejo Mexicano de certificación en Pediatría
            con número de registro <b>2268</b>.</p>
        <p align="justify">El Doctor Díaz Miranda es un reconocido Pediatra que ha ejercido la especialidad de Pediatría tanto en el
        ámbito institucional como privado, en el área de Urgencias y Terapia Intensiva durante casi 40 años,  habiendo
        sido Jefe del Dpto. de Terapia Intensiva del Instituto Nacional de Pediatría de México y recientemente galardonado
        con el premio al reconocimiento al Mérito “REMEI 2018” por el Estado de Morelos, en función de sus innovadoras
        aportaciones al desarrollo científico y tecnológico dentro de la especialidad de la Pediatría Médica.</p>

        <p align="justify">Esta Aplicación  constituye una herramienta tecnológica digital avanzada para llevar a cabo el seguimiento personal
        y familiar del crecimiento y desarrollo de los menores integrantes de un núcleo familiar; así mismo, constituye un
        acceso rápido a los cuidados generales de los menores, su control de vacunaciones, expediente clínico y  posibles
        servicios de asesoría médica <b>NO QUIRURGICA</b> ni de <b>URGENCIAS</b> en la especialidad de  Pediatría, particularmente cuando
        sea necesaria una SEGUNDA OPINION en los casos de duda diagnóstica y poder así reafirmar o en su caso proponer
        alternativas a las impresiones clínicas diagnosticadas por su médico Pediatra tratante.</p>

        <p align="justify">La(s) consulta(s) siempre serán a solicitud expresa de los padres o tutores y en su caso, responsables directos del
        cuidado del menor, aceptando los términos y condiciones en los que se ha suscrito el presente contrato y  renunciando
        total y/o parcialmente a su derecho de responsabilizar al titular o a los usuarios de dicha aplicación por los casos
        de supuesta “mal praxis” o negligencia médica, ya que en los términos en que está planteado el uso y manejo de la
        presente aplicación, <b>no se pretende resolver problemas de urgencias que requieran una valoración personalizada en
        consultorios o servicios hospitalarios</b>.</p>

        <p align="justify">Así mismo expresamos que con el uso de la presente aplicación o en la interpretación de las opiniones aquí emitidas
        por el titular o todos aquellos profesionales de la Pediatría que pudieren hacer uso de la misma, no existe  dolo,
        mala fe o intento de incurrir en opiniones que puedan contravenir a aquellas expresadas por los profesionales en el
        campo de la Especialidad de la Pediatría Médica o aquellas derivadas del buen juicio personal y sentido común de los usuarios.</p>

        <p align="justify">Así mismo con ésta aplicación los médicos Pediatras suscritos a la misma previa certificación y validez oficial de títulos y
        Cedulas profesionales, podrán  acceder de una manera práctica y resumida al expediente clínico de sus pacientes, recabando
        información clave o importante tanto de sus cartillas de vacunación como de sus antecedentes personales patológicos, para
        poder así establecer una sospecha diagnóstica o bien recomendar las primeras medidas a realizar en un primer nivel de atención médica.</p>

        <p align="justify">Toda la información enviada por los usuarios y recabada por el titular de la misma y/o los médicos Pediatras suscritos, será tratada
        como tema estrictamente confidencial y se normará por el aviso de privacidad publicado en <font color='#0040FF'>www.pediatría-innovadora.com</font></p>

        <p align="justify">Los planteamientos del problema sobre el cual se quiera consultar, antecedentes clínicos, radiológicos y de laboratorio,
        deberán enviarse en archivos digitales; ya sean fotos y/o videos o cualquier tipo de evidencia clínica relacionada con la enfermedad
        o problema a consultar, para poder emitir en primera instancia,+ una impresión general del problema y/o enfermedad de la que se trate.</p>

        <p align="justify"><b>El diagnóstico médico definitivo en todos los casos deberá ser emitido mediante una consulta formal en el consultorio que permita la revisión
            general del paciente y la identificación precisa del problema que se trate.</b></p>

        </body>
        </html>

        ]]>


    </string>
    <string name="facebook_app_id">676016879505448</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="notification_name">Consulta Realizada</string>
    <string name="notification_description">Consulta ha sdo atendida por el pediatra</string>
    <string name="ic_access_alarms">&#xe000;</string>
    <string name="ic_access_time">&#xe001;</string>
    <string name="ic_accessibility">&#xe002;</string>
    <string name="ic_account_box">&#xe003;</string>
    <string name="ic_account_circle">&#xe004;</string>
    <string name="ic_adb">&#xe005;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_add_alarm">&#xe007;</string>
    <string name="ic_add_box">&#xe008;</string>
    <string name="ic_add_circle">&#xe009;</string>
    <string name="ic_add_circle_outline">&#xe00a;</string>
</resources>